@@ -5,11 +5,11 @@ import de.fleigm.ptmm.eval.Info;
 import de.fleigm.ptmm.util.StopWatch;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.FileUtils;
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import javax.enterprise.context.Dependent;
-import java.io.InputStream;
+import java.io.File;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.function.Consumer;
 
@@ -18,36 +18,47 @@ import java.util.function.Consumer;
 public class EvaluateGtfsFeed implements Consumer<Info> {
 
   private final String evaluationToolPath;
-  private final String evaluationFolder;
 
-  public EvaluateGtfsFeed(@ConfigProperty(name = "evaluation.tool") String evaluationToolPath,
-                          @ConfigProperty(name = "evaluation.folder") String evaluationFolder) {
+  public EvaluateGtfsFeed(@ConfigProperty(name = "evaluation.tool") String evaluationToolPath) {
     this.evaluationToolPath = evaluationToolPath;
-    this.evaluationFolder = evaluationFolder;
   }
 
   @SneakyThrows
   @Override
   public void accept(Info info) {
+    log.info("Start evaluation step.");
+
     Path folder = info.getPath();
     Path original = folder.resolve(Evaluation.ORIGINAL_GTFS_FOLDER);
     Path generated = folder.resolve(Evaluation.GENERATED_GTFS_FOLDER);
-    String command = String.format("%s -m 3 -f %s -g %s %s",
+
+    String[] command = {
         evaluationToolPath,
-        folder,
-        original,
-        generated);
+        "-m", "3",
+        "-f", folder.toString(),
+        "-g", original.toString(),
+        generated.toString()
+    };
+
+    File outputFile = Files.createFile(folder.resolve(Evaluation.SHAPEVL_OUTPUT)).toFile();
 
     StopWatch stopWatch = StopWatch.createAndStart();
 
-    Process process = Runtime.getRuntime().exec(command);
+    Process process = new ProcessBuilder(command)
+        .redirectInput(outputFile)
+        .redirectError(outputFile)
+        .start();
 
-    try (InputStream evalOutput = process.getInputStream()) {
-      FileUtils.copyInputStreamToFile(evalOutput, folder.resolve(Evaluation.SHAPEVL_OUTPUT).toFile());
+    process.waitFor();
+
+    if (process.exitValue() != 0) {
+      throw new RuntimeException("Evaluation tool failed.");
     }
 
     stopWatch.stop();
 
     info.addStatistic("executionTime.evaluation", stopWatch.getMillis());
+
+    log.info("Finish evaluation step. Took {}s", stopWatch.getSeconds());
   }
 }
